--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+*{
+	margin: 0;
+	padding: 0;
+}
 table{
 	width: 500px;
 	height: 500px;
 	border: 1px solid black;
 	border-collapse: collapse;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 }
 
 tr,td{
@@ -10,4 +18,15 @@ tr,td{
 	height: 10px;
 	border: 1px solid black;
 	box-sizing: border-box;
+	position: relative;
+}
+
+td button{
+	width: 100%;
+	height: 100%;
+}
+img{
+	position: absolute;
+	top: 0px;
+	width: 100%;
 }
