--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ table{
 	border-collapse: collapse;
 	position: absolute;
 	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
+	top: 60px;
+	transform: translateX(-50%);
 }
 
 tr,td{
@@ -30,6 +30,24 @@ td button{
 	width: 100%;
 	height: 100%;
 }
-button{
-	font-size: 30px;
+#startt{
+	font-size: 20px;
+	margin-top: 10px;
+    width: 150px;
+    height: 39px;
+	background: lime;
+	color: black;
+	position: absolute;
+	left: 50%;
+	cursor: pointer;
+	transform: translateX(-50%);
+}
+.td_easy button{
+	font-size: 20px;
+}
+.td_easy button p{
+	margin: 10px;
+}
+.easy_p{
+	padding: 2.3vw;
 }
