--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*style bug td*/
 *{
 	margin: 0;
 	padding: 0;
@@ -30,7 +31,7 @@ td button{
 	width: 100%;
 	height: 100%;
 }
-#startt{
+#start_game{
 	font-size: 20px;
 	margin-top: 10px;
     width: 150px;
