--- a/style.css
+++ b/style.css
@@ -32,15 +32,14 @@ td button{
 	width: 100%;
 	height: 100%;
 }
-#start_game{
-	font-size: 20px;
-	margin-top: 10px;
-    width: 150px;
-    height: 39px;
-	background: lime;
-	color: black;
+#faces{
+    width: 50px;
+    height: 50px;
+	background-image: url("faces.gif");
+	background-size: 280px;
 	position: absolute;
 	left: 50%;
+	top: 5px;
 	cursor: pointer;
 	transform: translateX(-50%);
 }
@@ -99,4 +98,16 @@ td > p{
     selector {
         property: value;
     }
+}
+.smile{
+	background-position: 0 70px;
+}
+.click_smile{
+	background-position: -51px 69px;
+}
+.die_smile{
+	background-position: -152px 69px;
+}
+.hmm_smile{
+	background-position: -101px 70px;
 }
